--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-emoji": "^0.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll-to-bottom": "^4.1.0",
     "reactjs-popup": "^2.0.4",
     "socket.io-client": "^3.1.0",
     "web-vitals": "^0.2.4"
