--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "font-awesome": "^4.7.0",
+    "material-ui-image": "^3.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-emoji": "^0.5.0",
