--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.15.1",
     "axios": "^0.21.1",
     "font-awesome": "^4.7.0",
+    "internal-ip": "^4.3.0",
     "material-ui-image": "^3.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,6 +23,7 @@
     "reactjs-popup": "^2.0.4",
     "recoil": "^0.2.0",
     "socket.io-client": "^3.1.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
