--- a/package.json
+++ b/package.json
@@ -5,28 +5,18 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "antd": "^4.15.1",
+    "antd": "^4.15.6",
     "axios": "^0.21.1",
-    "font-awesome": "^4.7.0",
-    "internal-ip": "^4.3.0",
-    "material-ui-image": "^3.3.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-emoji": "^0.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-scroll-to-bottom": "^4.1.0",
-    "reactjs-popup": "^2.0.4",
-    "recoil": "^0.2.0",
-    "socket.io-client": "^3.1.0",
-    "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "^4.0.3",
+    "recoil": "^0.3.1",
+    "socket.io-client": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^7.25.0"
   }
 }
