--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@tensorflow-models/handpose": "^0.0.7",
+    "@tensorflow/tfjs": "^3.6.0",
     "antd": "^4.15.6",
     "axios": "^0.21.1",
+    "fingerpose": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-emoji": "^0.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-webcam": "^5.2.3",
     "recoil": "^0.3.1",
     "socket.io-client": "^4.1.2",
     "uuid": "^8.3.2"
