--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,9 +2,9 @@
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [{
-    "src": "favicon.ico",
+    "src": "wolf.png",
     "sizes": "64x64 32x32 24x24 16x16",
-    "type": "image/x-icon"
+    "type": "image"
   }],
   "start_url": ".",
   "display": "standalone"
